WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25644
V8CustomBinding.cpp missing a #include
https://bugs.webkit.org/show_bug.cgi?id=25644
Summary
V8CustomBinding.cpp missing a #include
Nate Chapin
Reported
2009-05-08 08:56:53 PDT
Needs to #include "V8Proxy.h"
Attachments
patch
(957 bytes, patch)
2009-05-08 09:03 PDT
,
Nate Chapin
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2009-05-08 09:03:35 PDT
Created
attachment 30131
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2009-05-08 09:21:23 PDT
Comment on
attachment 30131
[details]
patch We usually group V8-bindings related headers, so need an extra line break. But no biggie.
David Levin
Comment 3
2009-05-14 11:18:03 PDT
Assigned to levin for landing.
David Levin
Comment 4
2009-05-14 11:42:20 PDT
Committed
http://trac.webkit.org/changeset/43513
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug