2009-05-11  Nate Chapin  <japhet@google.com>

Reviewed by Dimitri Glazkov.

        V8CustomBinding.cpp is missing a header file

        https://bugs.webkit.org/show_bug.cgi?id=25644

        * bindings/v8/custom/V8CustomBinding.cpp: Added #include "V8Proxy.h".

Canonical link: https://commits.webkit.org/35503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43513 268f45cc-cd09-0410-ab3c-d52691b4dbfc