WebCore/bindings/v8/custom/V8CustomBinding.cpp
@@ -36,6 +36,7 @@
 #include "HTMLNames.h"
 #include "HTMLFrameElementBase.h"
 #include "CSSHelper.h"
+#include "V8Proxy.h"
 
 namespace WebCore {
 
